# llm.rs

./: Cargo.toml
.cargo/: config.toml
kernels/: common.cl  copy.cl  elementwise.cl  matmul_f32.cl  matmul_q4.cl  rms_norm.cl  rope.cl
src/: backend.rs  core.rs  lib.rs  main.rs  profile.rs  test.rs
src/backend/: cpu.rs  opencl.rs
src/bench/: main.rs
src/core/: config.rs  layer.rs  loader.rs  model.rs  shape.rs  storage.rs  tensor.rs
src/test/: cpu.rs  opencl.rs
